[package]
name = "project_461"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "12.1.2"

[dependencies.pyo3]
version = "0.18.0"
features = ["auto-initialize"]

[[bin]]
name = "run"
path = "run.rs"

[[bin]]
name = "calculate_ramp_up"
path = "local_cloning/calculate_ramp_up.rs"