[package]
name = "project_461"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "12.1.2"
octocrab = "0.16"
serde = { version = "1.0.126", features = ["derive"] }
tokio = {version = "1.25", features = ["rt", "rt-multi-thread", "macros"]}
serde_json = "1.0.91"
ureq = { version = "2.6.2", features = ["json"] }
simple-log = "1.5.1"
base64 = "0.21.0"
regex = "1"
