[package]
name = "project_461"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "12.1.2"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "calculate_ramp_up"
path = "local_cloning/calculate_ramp_up.rs"

[[bin]]
name = "calculate_bus_factor"
path = "rest_api/calculate_bus_factor.rs"

[[bin]]
name = "calculate_updated_code"
path = "rest_api/calculate_updated_code.rs"

[[bin]]
name = "calculate_pinning_practice"
path = "rest_api/calculate_pinning_practice.rs"
